# geo-offset

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
src/: edge.rs  lib.rs  offset.rs  utils.rs
src/tests/: fixtures.rs  mod.rs
src/tests/fixtures/: demo.json  demo_with_offset.json  polygon_polyline.json
