[package]
name = "geo-offset"
version = "0.1.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/lelongg/geo-offset"
documentation = "https://docs.rs/geo-offset/"
description = "Add margin and padding to geometric shapes"
keywords = ["geo", "polygon", "offset", "margin", "padding"]
categories = ["algorithms"]

[badges]
is-it-maintained-issue-resolution = { repository = "lelongg/geo-offset" }
is-it-maintained-open-issues = { repository = "lelongg/geo-offset" }
maintenance = { status = "actively-developed" }

[dependencies]
geo = "0.12.2"
itertools = "0.8.0"
geo-booleanop = { git ="https://github.com/grokse/rust-geo-booleanop.git", branch="geo_types_upgrade" }
num-traits = "0.2.8"

[dev-dependencies]
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
once_cell = "0.2.1"
data-uri-utils = "0.1.0"
geo-svg = "0.1.2"
geo-types = "0.4.3"