[package]
name = "geo-offset"
version = "0.3.1-alpha.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/lelongg/geo-offset"
documentation = "https://docs.rs/geo-offset/"
description = "Add margin and padding to geometric shapes"
keywords = ["geo", "polygon", "offset", "margin", "padding"]
categories = ["algorithms"]

[dependencies]
geo = "0.20.0"
itertools = "0.10.0"
geo-clipper = "0.7.0"
num-traits = "0.2.8"

[dev-dependencies]
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
once_cell = "1.4.0"
data-uri-utils = "0.1.0"
geo-svg = "0.5.0"
geo-types = "0.7.1"
